--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
+Credit goes to https://www.npmjs.com/package/ng2-completer
+<br>
+npm install ng2-completer --save
+<br>
+In app.module.ts
+<!-- import { Ng2CompleterModule } from "ng2-completer"; -->
+
 <h1>Search color from object</h1>
 <ng2-completer [(ngModel)]="searchStr" [datasource]="dataService" [minSearchLength]="0"></ng2-completer>
 <h1>Search captain from array</h1>
